Fix Linux proxy settings retrieval.

Only the environment variables were being consulted and not the desktop environment's settings.

Bug: 843942
Change-Id: I22c850717565b219f8ac0dc7566085cccc81af08
Reviewed-on: https://chromium-review.googlesource.com/1066562
Reviewed-by: Matt Mueller <mattm@chromium.org>
Commit-Queue: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#560054}